--- a/5_Pyomo_Linear_Programming.ipynb
+++ b/5_Pyomo_Linear_Programming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObCuHsQ4TAix8x6dgEtRzb",
+      "authorship_tag": "ABX9TyN5Eu3fnVHPPSZhYBo6AEck",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "_LjfjK-Ra1Wd"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "## Linear Probramming"
-      ]
+        "## Linear Programming"
+      ],
+      "metadata": {
+        "id": "luJ5HQgeJXb3"
+      }
     },
     {
       "cell_type": "markdown",
@@ -46,7 +44,7 @@
         "\\begin{align*}\n",
         "    \\min \\quad & c^\\top x\\\\\n",
         "    \\text{s.t.} \\quad & A x \\leq b\\\\\n",
-        "    & x \\geq 0, \\nonumber \n",
+        "    & x \\geq 0, \\nonumber\n",
         "\\end{align*}\n",
         "$$\n",
         "\n",
@@ -75,7 +73,7 @@
         "\n",
         "Current stock of raw materials: 200 g Lithium, 1200 g Nickel, 150 g Manganese, 200 g Cobalt, 100g Aluminum\n",
         "\n",
-        "How many Cathodes of each type should be produced to maximize the profit while respecting the raw material stock availability? "
+        "How many Cathodes of each type should be produced to maximize the profit while respecting the raw material stock availability?"
       ],
       "metadata": {
         "id": "_BGgUHaea_Dq"
@@ -95,7 +93,7 @@
         "    &   x_1 \\leq 150 &\\text{Manganese}\\\\\n",
         "    &   x_1 + 2x_2  \\leq 200 &\\text{Cobalt}\\\\\n",
         "    &   x_2 \\leq 100 &\\text{Aluminum}\\\\\n",
-        "    &   x_1, x_2 \\geq 0 \n",
+        "    &   x_1, x_2 \\geq 0\n",
         "\\end{align}\n",
         "$$"
       ],
@@ -112,7 +110,7 @@
         "\\begin{align*}\n",
         "    c = \\begin{pmatrix} 9 \\\\ 5 \\end{pmatrix},\n",
         "    \\qquad\n",
-        "    A = \n",
+        "    A =\n",
         "    \\begin{bmatrix}\n",
         "    1 & 1\\\\\n",
         "    7 & 6\\\\\n",
@@ -146,7 +144,7 @@
       "metadata": {
         "id": "zv7rmNWfbC67"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +159,7 @@
         "id": "igplirQbbDhy",
         "outputId": "6f9fd8bd-5d84-414f-94ac-585170bd6aa0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +209,7 @@
         "id": "fs5oTN1EbFNo",
         "outputId": "ae25afa0-7701-401b-a0c8-0bc950242f69"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
