--- a/5_Pyomo_Linear_Programming.ipynb
+++ b/5_Pyomo_Linear_Programming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5Eu3fnVHPPSZhYBo6AEck",
+      "authorship_tag": "ABX9TyNIFluw8sp2JsdXoeuczWR6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "## Linear Programming"
       ],
       "metadata": {
-        "id": "luJ5HQgeJXb3"
+        "id": "nUyPo_nrKPja"
       }
     },
     {
@@ -82,7 +82,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let $x_1$ denote the number of NMC and $x_2$ that of NCA. This decision can be reformulated as an optimization problem of the following form:\n",
+        "Let $x_1$ denote the number of NMC and $x_2$ that of NCA. This decision can be reformulated as an optimization problem of the following form:"
+      ],
+      "metadata": {
+        "id": "qX6xob3uKaku"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "$$\n",
         "\\begin{align}\n",
