--- a/5_Pyomo_Linear_Programming.ipynb
+++ b/5_Pyomo_Linear_Programming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNULO08iw5sF0dU/dykx+mM",
+      "authorship_tag": "ABX9TyO6vIj/3TLnwpXsiPFeLEBW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
       "cell_type": "markdown",
       "source": [
         "## The microchip production problem\n",
-        "The company GL  produces two types of Li-ion battery Cathodes, NMC (1 g Lithium, 7 Nickel, 1 g Manganese, 1 g Cobalt) and NCA (1 g :Lithium, 6 g Nickel, 2 g Cobalt, 1g Aluminium). Each of NMC can be sold for a \\$$9$ profit, and each of NCA for a \\$$5$ profit.\n",
+        "The company GL  produces two types of Li-ion battery Cathodes, NMC (1 g Lithium, 7 Nickel, 1 g Manganese, 1 g Cobalt) and NCA (1 g :Lithium, 6 g Nickel, 2 g Cobalt, 1g Aluminium). Each of NMC can be sold for a 9 USD profit, and each of NCA for a 5 USD profit.\n",
         "\n",
         "Current stock of raw materials: 200 g Lithium, 1200 g Nickel, 150 g Manganese, 200 g Cobalt, 100g Aluminum\n",
         "\n",
