--- a/5_Pyomo_Linear_Programming.ipynb
+++ b/5_Pyomo_Linear_Programming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6vIj/3TLnwpXsiPFeLEBW",
+      "authorship_tag": "ABX9TyNIA9HOFeqMxejH0ZGoE+Qn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,14 +69,50 @@
       "cell_type": "markdown",
       "source": [
         "## The microchip production problem\n",
-        "The company GL  produces two types of Li-ion battery Cathodes, NMC (1 g Lithium, 7 Nickel, 1 g Manganese, 1 g Cobalt) and NCA (1 g :Lithium, 6 g Nickel, 2 g Cobalt, 1g Aluminium). Each of NMC can be sold for a 9 USD profit, and each of NCA for a 5 USD profit.\n",
+        "The company GL  produces two types of Li-ion battery Cathodes, NMC (1 g Lithium, 7 g Nickel, 1 g Manganese, 1 g Cobalt) and NCA (1 g :Lithium, 6 g Nickel, 2 g Cobalt, 1g Aluminium). Each of NMC can be sold for a 9 USD profit, and each of NCA for a 5 USD profit.\n",
         "\n",
-        "Current stock of raw materials: 200 g Lithium, 1200 g Nickel, 150 g Manganese, 200 g Cobalt, 100g Aluminum\n",
-        "\n",
-        "How many Cathodes of each type should be produced to maximize the profit while respecting the raw material stock availability?"
+        "\n"
       ],
       "metadata": {
         "id": "_BGgUHaea_Dq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " Cathode |Lithium | Nickel | Manganese | Cobalt| Aluminiium| Profit\n",
+        "------------------ |------------------ |------------------ |------------------ |------------------ |------------------ |------------------\n",
+        "NMC | 1g | 7g| 1g | 1g | 0g | 9 USD\n",
+        "NCA | 1g | 6g| 2g | 0g | 1g | 5 USD"
+      ],
+      "metadata": {
+        "id": "b3CPXC4GNZHV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Current stock of raw materials: 200 g Lithium, 1200 g Nickel, 150 g Manganese, 200 g Cobalt, 100g Aluminum\n",
+        "\n",
+        "\n",
+        "Lithium | Nickel | Manganese | Cobalt| Aluminiium\n",
+        "------------------ |------------------ |------------------ |------------------ |------------------\n",
+        "200g | 1200g| 150g | 200g | 100g\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "aZAjIgRLQtk8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q: How many Cathodes of each type should be produced to maximize the profit while respecting the raw material stock availability? **"
+      ],
+      "metadata": {
+        "id": "RU-Xvu3dRNYL"
       }
     },
     {
