--- a/5_Pyomo_Linear_Programming.ipynb
+++ b/5_Pyomo_Linear_Programming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIA9HOFeqMxejH0ZGoE+Qn",
+      "authorship_tag": "ABX9TyOSbM3B2iucuc1ZdsgCHVX5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,6 +272,17 @@
       ],
       "metadata": {
         "id": "z0Xtrmu1bG2K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Reference**\n",
+        "\n",
+        "https://mobook.github.io/MO-book/intro.html"
+      ],
+      "metadata": {
+        "id": "ZxYZ3ckDA0Wj"
       }
     }
   ]
